﻿V.6	(beta)					14th February 2018

	Notice:
		Due to new levels and change in the save format, all saves prior to this version will be erased

	New:
		99 levels
		All localizations are fully implemented
		Steam Workshop support (for the Steam version of the game and editor)
		Editor manual
		Endings
		New characters and levels		

	Changes:
		Revamped the title screen and main menu
		Auto-pause the game if a gamepad is disconnected
		Removed intro and endings from custom campaigns
		Reworked game feel

	Fixes:
		Fixes high DPI support for the editor
		Fixes high DPI support on Windows 10
		Fixes editor rendering on Windows 10 (it is no more blurry)


V.5 (alpha)					18th August 2017

	Notice:
		Due to new levels and change in the save format, all saves prior to this version will be erased

	New:
		Introduction cutscene:
			There is now a "0" level which will play a cutscene explaining why the kid is so greedy
		A couple new levels

	Changes:
		You can interact with the up/down key with objects and doors
		Rolling through a door will now close it if you're rolling in the closing direction
		Slamming a door on a NPC will increase their beat rate
		Exit elevator will now blink when the level is complete
		Tweaked most levels difficulty

	Fixes:
		Fixes the slamming sound and animation on retirees and nurses		
		Fixes retirees hurting you while being stunned


V.4 (alpha)					4th August 2017

	Notice:
		Due to modified levels, all saves prior to this version will be erased

	New:
		A few new levels
		Game editor: 
			The game now comes with its building editor in the "./Editor" folder
			For a complete tutorial of how it works, please refer to this video: YT link
			There is no Steam integration yet, and as a consequence, you can test only one building at a time
			The editor only works on Windows (for now)
		Basic workshop support:
			You can export and manually share levels