@@ -22,7 +22,7 @@ namespace GreedyKid
     /// </summary>
     public class GreedyKidGame : Game
     {
-        public const string Version = "V.6";
+        public const string Version = "V.7";
 
         public static bool ShouldExit = false;
         public static bool ShouldApplyChanges = false;
